v1.2 Feb 15th, 2009
* rename to GAPI (Google API)
* add language detection functionality

v1.1 Feb 14th, 2009
* forked by Daniel Bovensiepen
* remove hpricot dependencies
* fix for Ruby 1.9 (maybe break 1.8)
* drop gem and cli tool
* scalling down rakefile

v1.0 Dec 16th, 2008
* using the Google AJAX Language API instead of scrape
* add the batch translation support
* refactor the whole project

v0.2 Nov 16, 2007
* add a command line tool.

v0.1 Nov 15, 2007
* initial release