@@ -1,3 +1,4 @@
+Copyright (c) 2009 Daniel Bovensiepen
 Copyright (c) 2007 Dingding Ye
 
 Permission is hereby granted, free of charge, to any person obtaining
