@@ -1,4 +1,5 @@
 task :test do
   require "tests/ts_translate"
   require "tests/ts_detect"
+  require "tests/ts_search"
 end
