@@ -1,6 +1,8 @@
 # this file was modified by Daniel Bovensiepen (daniel@bovensiepen.net)
 
+require 'json'
 require 'uri'
 require 'open-uri'
 require File.join(File.dirname(__FILE__), 'gapi/language')
 require File.join(File.dirname(__FILE__), 'gapi/gapi')
+require File.join(File.dirname(__FILE__), 'gapi/search')
